--- a/epic-nfts/package.json
+++ b/epic-nfts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wave-portal",
+  "name": "epic-nfts",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -16,5 +16,8 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.1",
     "hardhat": "^2.6.8"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.3.3"
   }
 }
